--- a/index.scss
+++ b/index.scss
@@ -167,3 +167,9 @@ $layout-schemas: (
 // Color Palette
 // =====================================================================================================
 //
+
+// =====================================================================================================
+// Module forwards.
+// =====================================================================================================
+@forward 'src/media-queries';
+@forward 'src/grid';
