--- a/test/playground/index.scss
+++ b/test/playground/index.scss
@@ -1,15 +1,1 @@
-@use '../../src/media-queries.scss' as mq;
-@use '../../src/grid.scss' as *;
-
-@include grid($grid-schemas);
-@include layout($layout-schemas);
-
-body {
-  margin: 0;
-}
-
-.element {
-  height: 100px;
-  background-color: red;
-  width: 100%;
-}
+@use '../../index.scss' as *;
